# QA-practice

./: README.md  main.java
Indonesia_indicator/Python/: pyproject.toml  readme.md
Indonesia_indicator/Python/page/: POM.py  __init__.py  home_page.py  inventory_page.py  login_page.py
Indonesia_indicator/Python/report/: 000d5918-e961-4e4a-868e-31e8989301ff-container.json  028e6ebf-9a37-4324-b924-06fe0c0b7190-result.json  0326be52-25ba-4454-a0e6-54856247096c-result.json  0468233f-d27b-4fdd-ac1a-7bb50fc60cad-result.json  04b4010e-b6af-49d8-9a32-b8b29d798239-result.json  06eda381-2498-4559-bf39-b3c3adcd191c-container.json  08ca0c2e-37db-4ccb-8025-05af686cad9b-result.json  08cd103a-784c-4940-89d4-8f63c8d0200c-result.json  09819d45-1a68-4c14-8860-f7090b984fb9-result.json  09afa3b1-da3e-4855-98cd-e97ca0864e72-result.json  0b9c7b27-9eeb-4141-852e-960afa01a12c-container.json  0bc40d13-1229-40a0-8ed4-ec61d8be6ff5-result.json  0ce93c87-c1d7-4780-910e-c5172e833358-container.json  0d6358d5-2724-47ef-847c-563cb5a7b30e-result.json  0e065c14-b415-4640-bb33-798872134130-container.json  0e5d8193-dc89-4f3f-9e4e-d762ece48c53-container.json  0e7c18e4-d32e-449a-a1ed-0f30d5fb1fc4-container.json  0eea4626-005c-4c51-9b1a-efc6143041c9-result.json  0eeddfee-c821-42ea-91e3-ad0bccfb5c63-container.json  0f157b82-d8d9-4c04-9c6e-4883500acf19-container.json  0fb81433-4ca2-4989-8b9f-b80912a018d3-container.json  1203a80e-95a9-4b10-b5b1-0d109d6b3d9a-container.json  1213cc00-b7ef-49c7-a133-a01748a425d0-container.json  16e285aa-88bc-4954-a6f7-8010f5961558-container.json  (+224 more)
Saucelabs/: test_cases.xlsx
(+233 files in other folders)
