[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "test-package"
version = "0.1.0"
description = "Python package for automated tests on indonesia indicator web app"
authors = ["Your Name sultanahmadalfath777@gmail.com"]
packages = [
    { include = "page" },
    { include = "tests" }
]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.0.0"
pytest = "^8.3.4"
setuptools = "^75.6.0"
allure-pytest = "^2.13.5"

[tool.poetry.scripts]
run_test_suites = "unittest:main"

